--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
                     <td>${size}</td>
                 </tr>
                         `;
-                        $('#orders-box').append(temp_html);
+                        $('#orders-box').prepend(temp_html);
                     }
                 }
             });
